[package]
name = "wasm-demo"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
periodic_core = { path = "../core", package = "core", features = ["wasm"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
serde.workspace = true
serde_json.workspace = true
console_error_panic_hook = { version = "0.1", optional = true }
js-sys.workspace = true
web-sys.workspace = true
getrandom.workspace = true

[features]
default = []
console = ["console_error_panic_hook"]
